--- a/MauiApp8/Components/Layout/NavMenu.razor
+++ b/MauiApp8/Components/Layout/NavMenu.razor
@@ -1,43 +1,29 @@
-﻿<nav class="flex-column">
-    <div class="nav-item px-3">
-        <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">
-            <span class="oi oi-home" aria-hidden="true"></span> Home
-        </NavLink>
-    </div>
+﻿<nav class="app-nav flex-column">
+    <NavLink class="app-nav-link" href="/" Match="NavLinkMatch.All">
+        <span class="oi oi-home" aria-hidden="true"></span> Home
+    </NavLink>
 
-    <div class="nav-item px-3">
-        <NavLink class="nav-link" href="/today">
-            <span class="oi oi-plus" aria-hidden="true"></span> Today Entry
-        </NavLink>
-    </div>
+    <NavLink class="app-nav-link" href="/today">
+        <span class="oi oi-plus" aria-hidden="true"></span> Today Entry
+    </NavLink>
 
-    <div class="nav-item px-3">
-        <NavLink class="nav-link" href="/calendar">
-            <span class="oi oi-calendar" aria-hidden="true"></span> Calendar
-        </NavLink>
-    </div>
+    <NavLink class="app-nav-link" href="/calendar">
+        <span class="oi oi-calendar" aria-hidden="true"></span> Calendar
+    </NavLink>
 
-    <div class="nav-item px-3">
-        <NavLink class="nav-link" href="/timeline">
-            <span class="oi oi-list-rich" aria-hidden="true"></span> Timeline
-        </NavLink>
-    </div>
+    <NavLink class="app-nav-link" href="/timeline">
+        <span class="oi oi-list-rich" aria-hidden="true"></span> Timeline
+    </NavLink>
 
-    <div class="nav-item px-3">
-        <NavLink class="nav-link" href="/dashboard">
-            <span class="oi oi-graph" aria-hidden="true"></span> Dashboard
-        </NavLink>
-    </div>
+    <NavLink class="app-nav-link" href="/dashboard">
+        <span class="oi oi-graph" aria-hidden="true"></span> Dashboard
+    </NavLink>
 
-    <div class="nav-item px-3">
-        <NavLink class="nav-link" href="/export">
-            Export PDF
-        </NavLink>
-    </div>
+    <NavLink class="app-nav-link" href="/export">
+        <span class="oi oi-document" aria-hidden="true"></span> Export PDF
+    </NavLink>
 
-    <div class="nav-item px-3">
-        <NavLink class="nav-link" href="/security">
-            <span class="oi oi-lock-locked" aria-hidden="true"></span> Security
-        </NavLink>
-    </div>
+    <NavLink class="app-nav-link" href="/security">
+        <span class="oi oi-lock-locked" aria-hidden="true"></span> Security
+    </NavLink>
 </nav>
